--- a/manufacturer/src/gold_supply/gold.ipynb
+++ b/manufacturer/src/gold_supply/gold.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e32dea75",
+   "metadata": {},
+   "source": [
+    "## Configuration Variables\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "096d8940",
@@ -13,6 +21,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5af974d",
+   "metadata": {},
+   "source": [
+    "## Create Gold Schema\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "df7c3517",
@@ -20,6 +36,14 @@
    "outputs": [],
    "source": [
     "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {catalog}.{gold_schema}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1af9a9da",
+   "metadata": {},
+   "source": [
+    "## B2C KPI View\n"
    ]
   },
   {
@@ -73,6 +97,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9ce5b2b",
+   "metadata": {},
+   "source": [
+    "## B2B KPI View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "84ac12ef",
@@ -120,6 +152,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f5baf41",
+   "metadata": {},
+   "source": [
+    "## Top Inventory Products View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8f87946f",
@@ -140,6 +180,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d9a6b02",
+   "metadata": {},
+   "source": [
+    "## Low Stock Products View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "20311a3e",
@@ -157,6 +205,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e72c8d7c",
+   "metadata": {},
+   "source": [
+    "## Inventory Status Summary View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "747ca357",
@@ -171,6 +227,14 @@
     "FROM {catalog}.{silver_schema}.inventory_mv\n",
     "GROUP BY inventory_status;\n",
     "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c01157aa",
+   "metadata": {},
+   "source": [
+    "## Location Inventory Value View\n"
    ]
   },
   {
@@ -196,6 +260,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d005f054",
+   "metadata": {},
+   "source": [
+    "## Location Inventory Quantity View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ae8701aa",
@@ -216,6 +288,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a23010f2",
+   "metadata": {},
+   "source": [
+    "## B2C Monthly Purchase Summary View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "97efa6ca",
@@ -231,6 +311,14 @@
     "GROUP BY DATE_TRUNC('month', order_date)\n",
     "ORDER BY order_month;\n",
     "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80168c5a",
+   "metadata": {},
+   "source": [
+    "## B2C Purchase Summary by Location View\n"
    ]
   },
   {
@@ -255,6 +343,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a42a7365",
+   "metadata": {},
+   "source": [
+    "## B2C Category Quantity Ordered View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6cd923e3",
@@ -275,6 +371,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddc876b5",
+   "metadata": {},
+   "source": [
+    "## B2C Order Status Summary View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "00e7375c",
@@ -289,6 +393,14 @@
     "FROM {catalog}.{silver_schema}.consumer_orders_mv\n",
     "GROUP BY order_status;\n",
     "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a214782c",
+   "metadata": {},
+   "source": [
+    "## B2B Monthly Purchase Summary View\n"
    ]
   },
   {
@@ -307,6 +419,14 @@
     "GROUP BY DATE_TRUNC('month', order_date)\n",
     "ORDER BY order_month;\n",
     "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07d6c528",
+   "metadata": {},
+   "source": [
+    "## B2B Top Distributor Purchase Value View\n"
    ]
   },
   {
@@ -330,6 +450,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09a6e509",
+   "metadata": {},
+   "source": [
+    "## B2B Category Quantity Ordered View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8fe37ed0",
@@ -350,6 +478,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "34990fc2",
+   "metadata": {},
+   "source": [
+    "## B2B Order Status Summary View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ce5ad7b1",
@@ -363,6 +499,14 @@
     "    COUNT(*) AS count\n",
     "FROM {catalog}.{silver_schema}.distributor_sale_order_mv;\n",
     "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63980f97",
+   "metadata": {},
+   "source": [
+    "## Overall KPI View\n"
    ]
   },
   {
@@ -436,6 +580,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b62ce612",
+   "metadata": {},
+   "source": [
+    "## Overall Monthly Purchase Summary View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "640ca98e",
@@ -460,6 +612,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11dd7568",
+   "metadata": {},
+   "source": [
+    "## Overall Category Quantity Ordered View\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "da44b51d",
@@ -481,6 +641,14 @@
     "GROUP BY category\n",
     "ORDER BY total_quantity_ordered DESC;\n",
     "\"\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e81df70",
+   "metadata": {},
+   "source": [
+    "## Overall Order Status Summary View\n"
    ]
   },
   {
