Refactor gold supply notebook to update SQL queries for invoice data, enhancing accuracy in purchase summaries and distributor metrics. Adjusted configuration section title for clarity.

--- a/manufacturer/src/gold_supply/gold.ipynb
+++ b/manufacturer/src/gold_supply/gold.ipynb
@@ -5,7 +5,7 @@
    "id": "e32dea75",
    "metadata": {},
    "source": [
-    "## Configuration Variables\n"
+    "## Configuration\n"
    ]
   },
   {
@@ -118,15 +118,15 @@
     "        i.product_id,\n",
     "        i.quantity_on_hand,\n",
     "        p.retail_price,\n",
-    "        dso.item_total_amount AS total_price,\n",
-    "        dso.order_quantity AS quantity,\n",
-    "        dso.order_date,\n",
-    "        dso.order_id AS co_order_id\n",
+    "        di.invoice_item_total_amount AS total_price,\n",
+    "        di.invoiced_quantity AS quantity,\n",
+    "        di.invoice_date AS order_date,\n",
+    "        di.invoice_id AS co_order_id\n",
     "    FROM {catalog}.{silver_schema}.inventory_mv i\n",
     "    JOIN {catalog}.{silver_schema}.product_mv p \n",
     "        ON i.product_id = p.product_id\n",
-    "    JOIN {catalog}.{silver_schema}.distributor_sale_order_mv dso \n",
-    "        ON p.product_id = dso.product_id\n",
+    "    JOIN {catalog}.{silver_schema}.distributor_sale_order_mv di \n",
+    "        ON p.product_id = di.product_id\n",
     "),\n",
     "agg_level1 AS (\n",
     "    SELECT\n",
@@ -413,10 +413,10 @@
     "spark.sql(f\"\"\"\n",
     "CREATE OR REPLACE VIEW {catalog}.{gold_schema}.supply_b2b_monthly_purchase_summary AS\n",
     "SELECT\n",
-    "    DATE_TRUNC('month', order_date) AS order_month,\n",
-    "    ROUND(SUM(item_total_amount), 2) AS total_purchase_amount\n",
+    "    DATE_TRUNC('month', invoice_date) AS order_month,\n",
+    "    ROUND(SUM(invoice_item_total_amount), 2) AS total_purchase_amount\n",
     "FROM {catalog}.{silver_schema}.distributor_sale_order_mv\n",
-    "GROUP BY DATE_TRUNC('month', order_date)\n",
+    "GROUP BY DATE_TRUNC('month', invoice_date)\n",
     "ORDER BY order_month;\n",
     "\"\"\")\n"
    ]
@@ -440,10 +440,12 @@
     "CREATE OR REPLACE VIEW {catalog}.{gold_schema}.supply_b2b_top_distributor_purchase_value AS\n",
     "SELECT \n",
     "    d.distributor_name,\n",
-    "    ROUND(SUM(dso.item_total_amount), 2) AS total_purchase_value\n",
+    "    ROUND(SUM(di.invoice_item_total_amount), 2) AS total_purchase_value\n",
     "FROM {catalog}.{silver_schema}.distributor_mv d\n",
     "JOIN {catalog}.{silver_schema}.distributor_sale_order_mv dso\n",
     "    ON d.distributor_id = dso.distributor_id\n",
+    "JOIN {catalog}.{silver_schema}.distributor_sale_order_mv di\n",
+    "    ON dso.order_id = di.sales_order_id\n",
     "GROUP BY d.distributor_name\n",
     "ORDER BY total_purchase_value DESC;\n",
     "\"\"\")\n"
@@ -468,10 +470,10 @@
     "CREATE OR REPLACE VIEW {catalog}.{gold_schema}.supply_b2b_category_quantity_ordered AS\n",
     "SELECT \n",
     "    pr.category,\n",
-    "    SUM(dso.order_quantity) AS total_quantity_ordered\n",
-    "FROM {catalog}.{silver_schema}.distributor_sale_order_mv dso\n",
+    "    SUM(di.invoiced_quantity) AS total_quantity_ordered\n",
+    "FROM {catalog}.{silver_schema}.distributor_sale_order_mv di\n",
     "JOIN {catalog}.{silver_schema}.product_mv pr\n",
-    "    ON dso.product_id = pr.product_id\n",
+    "    ON di.product_id = pr.product_id\n",
     "GROUP BY pr.category\n",
     "ORDER BY total_quantity_ordered DESC;\n",
     "\"\"\")\n"
@@ -539,15 +541,16 @@
     "        i.product_id,\n",
     "        i.quantity_on_hand,\n",
     "        p.retail_price,\n",
-    "        dso.item_total_amount AS total_price,\n",
-    "        dso.order_quantity AS quantity,\n",
-    "        dso.order_date,\n",
-    "        dso.order_id AS co_order_id\n",
+    "        di.invoice_item_total_amount AS total_price,\n",
+    "        di.invoiced_quantity AS quantity,\n",
+    "        di.invoice_date AS order_date,\n",
+    "        di.invoice_id AS co_order_id,\n",
+    "        NULL AS order_status\n",
     "    FROM {catalog}.{silver_schema}.inventory_mv i\n",
     "    JOIN {catalog}.{silver_schema}.product_mv p \n",
     "        ON i.product_id = p.product_id\n",
-    "    JOIN {catalog}.{silver_schema}.distributor_sale_order_mv dso \n",
-    "        ON p.product_id = dso.product_id\n",
+    "    JOIN {catalog}.{silver_schema}.distributor_sale_order_mv di \n",
+    "        ON p.product_id = di.product_id\n",
     "),\n",
     "combined_base AS (\n",
     "    SELECT * FROM b2c_base\n",
