Enhance gold sales notebook by updating section titles for clarity and adding markdown cells for B2C and B2B KPI documentation. This improves the organization and readability of the notebook.

--- a/manufacturer/src/gold_sales/gold.ipynb
+++ b/manufacturer/src/gold_sales/gold.ipynb
@@ -5,7 +5,7 @@
    "id": "8e5c0be4",
    "metadata": {},
    "source": [
-    "## Configuration Variables\n"
+    "## Configuration\n"
    ]
   },
   {
@@ -21,6 +21,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7c04837",
+   "metadata": {},
+   "source": [
+    "## Create Gold Schema"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "06cbde10",
@@ -31,13 +39,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5031603",
+   "metadata": {},
+   "source": [
+    "## B2C Overall KPIs\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "208c0d99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# B2C Overall KPIs\n",
     "spark.sql(f\"\"\"\n",
     "CREATE OR REPLACE VIEW {catalog}.{gold_schema}.b2c_overall_kpis AS\n",
     "WITH base AS (\n",
@@ -281,13 +296,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35772eb5",
+   "metadata": {},
+   "source": [
+    "## B2B Overall KPIs\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b09a1aa6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# B2B Overall KPIs\n",
     "spark.sql(f\"\"\"\n",
     "CREATE OR REPLACE VIEW {catalog}.{gold_schema}.b2b_overall_kpis AS\n",
     "WITH base AS (\n",
