added catalog creation in gold product

--- a/manufacturer/src/gold_product/product_sales.ipynb
+++ b/manufacturer/src/gold_product/product_sales.ipynb
@@ -27,6 +27,24 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "d8b7991b-f1de-4659-b0b7-89c1df2c6133",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "CREATE CATALOG IF NOT EXISTS dev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
      "nuid": "292a2a78-6236-4481-87c2-66a9f25da614",
      "showTitle": false,
      "tableResultSettingsMap": {},
