gold product changes

--- a/manufacturer/src/gold_product/product_sales.ipynb
+++ b/manufacturer/src/gold_product/product_sales.ipynb
@@ -5,9 +5,12 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "ff240753-1a54-4377-b9e1-5efcab2cc71d",
+     "nuid": "0957ec3a-ac30-44f2-824b-47bee3e948c0",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -15,9 +18,9 @@
    },
    "outputs": [],
    "source": [
-    "DECLARE catalog STRING DEFAULT 'dev';\n",
-    "DECLARE silver_schema STRING DEFAULT '02_silver';\n",
-    "DECLARE gold_schema STRING DEFAULT '03_gold_product';"
+    "DECLARE catalog = 'dev';\n",
+    "DECLARE silver_schema = '02_silver';\n",
+    "DECLARE gold_schema = '03_gold_product';"
    ]
   },
   {
@@ -25,9 +28,12 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
-     "nuid": "d8b7991b-f1de-4659-b0b7-89c1df2c6133",
+     "nuid": "4aeacae1-44fa-462a-8665-e8bd469a3c2a",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -35,7 +41,8 @@
    },
    "outputs": [],
    "source": [
-    "CREATE CATALOG IF NOT EXISTS dev"
+    "CREATE CATALOG IF NOT EXISTS IDENTIFIER(catalog);\n",
+    "CREATE SCHEMA IF NOT EXISTS IDENTIFIER(catalog || '.' || gold_schema);"
    ]
   },
   {
@@ -53,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "CREATE OR REPLACE VIEW ${catalog}.${gold_schema}.product_b2b AS\n",
+    "CREATE OR REPLACE VIEW IDENTIFIER(catalog || '.' || gold_schema || '.product_b2b') AS\n",
     "SELECT \n",
     "di.invoice_id,\n",
     "di.invoice_item_no,\n",
@@ -81,9 +88,9 @@
     "p.department,\n",
     "p.unit_price as cost_price,\n",
     "p.retail_price as mrp\n",
-    "FROM ${catalog}.${silver_schema}.distributor_invoice_mv di \n",
-    "LEFT JOIN ${catalog}.${silver_schema}.distributor_sale_order_mv so on di.sales_order_id=so.order_id and di.sales_order_item_no=so.item_no\n",
-    "LEFT JOIN ${catalog}.${silver_schema}.product_mv p on di.product_id=p.product_id;"
+    "FROM IDENTIFIER(catalog || '.' || silver_schema || '.distributor_invoice_mv') di \n",
+    "LEFT JOIN IDENTIFIER(catalog || '.' || silver_schema || '.distributor_sale_order_mv') so on di.sales_order_id=so.order_id and di.sales_order_item_no=so.item_no\n",
+    "LEFT JOIN IDENTIFIER(catalog || '.' || silver_schema || '.product_mv') p on di.product_id=p.product_id;"
    ]
   },
   {
@@ -101,7 +108,7 @@
    },
    "outputs": [],
    "source": [
-    "CREATE OR REPLACE VIEW ${catalog}.${gold_schema}.product_b2c AS\n",
+    "CREATE OR REPLACE VIEW IDENTIFIER(catalog || '.' || gold_schema || '.product_b2c') AS\n",
     "SELECT \n",
     "co.order_id,\n",
     "co.order_item_id,\n",
@@ -121,8 +128,8 @@
     "p.department,\n",
     "p.unit_price as cost_price,\n",
     "p.retail_price as mrp\n",
-    "FROM ${catalog}.${silver_schema}.consumer_orders_mv co\n",
-    "LEFT JOIN ${catalog}.${silver_schema}.product_mv p on co.product_id=p.product_id\n",
+    "FROM IDENTIFIER(catalog || '.' || silver_schema || '.consumer_orders_mv') co\n",
+    "LEFT JOIN IDENTIFIER(catalog || '.' || silver_schema || '.product_mv') p on co.product_id=p.product_id\n",
     "where co.order_status='Delivered';"
    ]
   }
