--- a/manufacturer/src/intial/Initial_setup.ipynb
+++ b/manufacturer/src/intial/Initial_setup.ipynb
@@ -67,11 +67,13 @@
    "source": [
     "from databricks.sdk import WorkspaceClient\n",
     "from databricks.sdk.service.jobs import PauseStatus\n",
-    "\n",
+    "w = WorkspaceClient()\n",
     "jobs=[\"gold_product\",\n",
     "      \"gold_sales\",\n",
     "      \"gold_supply\"]\n",
     "names_avail=[]\n",
+    "def name_check(name, jobs):\n",
+    "    return any(job in name for job in jobs)\n",
     "for i in w.jobs.list():\n",
     "    if(name_check(i.settings.name, jobs)):\n",
     "        names_avail.append((i.settings.name, i.job_id))\n",
