--- a/manufacturer/src/gold_product/gold.ipynb
+++ b/manufacturer/src/gold_product/gold.ipynb
@@ -16,8 +16,8 @@
    "outputs": [],
    "source": [
     "dbutils.widgets.text(\"catalog\", \"dev\")\n",
-    "dbutils.widgets.text(\"silver_schema\", \"dev\")\n",
-    "dbutils.widgets.text(\"gold_schema\", \"dev\")"
+    "dbutils.widgets.text(\"silver_schema\", \"02_silver\")\n",
+    "dbutils.widgets.text(\"gold_schema\", \"03_gold_product\")"
    ]
   },
   {
@@ -47,10 +47,7 @@
    "source": [
     "catalog = dbutils.widgets.get(\"catalog\")\n",
     "silver_schema = dbutils.widgets.get(\"silver_schema\")\n",
-    "gold_schema = dbutils.widgets.get(\"gold_schema\")\n",
-    "print(\"catalog : \",catalog)\n",
-    "print(\"silver_schema : \",silver_schema)\n",
-    "print(\"gold_schema : \",gold_schema)"
+    "gold_schema = dbutils.widgets.get(\"gold_schema\")"
    ]
   },
   {
@@ -71,9 +68,9 @@
    },
    "outputs": [],
    "source": [
-    "# # Create catalog and schema dynamically using Python variables\n",
-    "# spark.sql(f\"CREATE CATALOG IF NOT EXISTS {catalog}\")\n",
-    "# spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {catalog}.{gold_schema}\")"
+    "# Create catalog and schema dynamically using Python variables\n",
+    "spark.sql(f\"CREATE CATALOG IF NOT EXISTS {catalog}\")\n",
+    "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {catalog}.{gold_schema}\")"
    ]
   },
   {
@@ -91,39 +88,39 @@
    },
    "outputs": [],
    "source": [
-    "# product_b2b_sql = f\"\"\"\n",
-    "# CREATE OR REPLACE VIEW {catalog}.{gold_schema}.product_b2b AS\n",
-    "# SELECT \n",
-    "#   di.invoice_id,\n",
-    "#   di.invoice_item_no,\n",
-    "#   di.product_id,\n",
-    "#   di.sales_order_id,\n",
-    "#   di.sales_order_item_no,\n",
-    "#   di.invoiced_quantity as brought_quantity,\n",
-    "#   di.primary_unit,\n",
-    "#   di.invoice_item_total_amount as item_total,\n",
-    "#   di.invoice_date,\n",
-    "#   so.distributor_id, \n",
-    "#   so.order_date, \n",
-    "#   so.currency, \n",
-    "#   so.order_quantity, \n",
-    "#   so.order_quantity_uom as unit_measure, \n",
-    "#   so.unit_price as selling_price, \n",
-    "#   p.product_name,\n",
-    "#   p.brand,\n",
-    "#   p.manufacturer,\n",
-    "#   p.category,\n",
-    "#   p.department,\n",
-    "#   p.unit_price as cost_price,\n",
-    "#   p.retail_price as mrp\n",
-    "# FROM {catalog}.{silver_schema}.distributor_invoice_mv di \n",
-    "# LEFT JOIN {catalog}.{silver_schema}.distributor_sale_order_mv so \n",
-    "#   ON di.sales_order_id = so.order_id \n",
-    "#   AND di.sales_order_item_no = so.item_no\n",
-    "# LEFT JOIN {catalog}.{silver_schema}.product_mv p \n",
-    "#   ON di.product_id = p.product_id\n",
-    "# \"\"\"\n",
-    "# spark.sql(product_b2b_sql)"
+    "product_b2b_sql = f\"\"\"\n",
+    "CREATE OR REPLACE VIEW {catalog}.{gold_schema}.product_b2b AS\n",
+    "SELECT \n",
+    "  di.invoice_id,\n",
+    "  di.invoice_item_no,\n",
+    "  di.product_id,\n",
+    "  di.sales_order_id,\n",
+    "  di.sales_order_item_no,\n",
+    "  di.invoiced_quantity as brought_quantity,\n",
+    "  di.primary_unit,\n",
+    "  di.invoice_item_total_amount as item_total,\n",
+    "  di.invoice_date,\n",
+    "  so.distributor_id, \n",
+    "  so.order_date, \n",
+    "  so.currency, \n",
+    "  so.order_quantity, \n",
+    "  so.order_quantity_uom as unit_measure, \n",
+    "  so.unit_price as selling_price, \n",
+    "  p.product_name,\n",
+    "  p.brand,\n",
+    "  p.manufacturer,\n",
+    "  p.category,\n",
+    "  p.department,\n",
+    "  p.unit_price as cost_price,\n",
+    "  p.retail_price as mrp\n",
+    "FROM {catalog}.{silver_schema}.distributor_invoice_mv di \n",
+    "LEFT JOIN {catalog}.{silver_schema}.distributor_sale_order_mv so \n",
+    "  ON di.sales_order_id = so.order_id \n",
+    "  AND di.sales_order_item_no = so.item_no\n",
+    "LEFT JOIN {catalog}.{silver_schema}.product_mv p \n",
+    "  ON di.product_id = p.product_id\n",
+    "\"\"\"\n",
+    "spark.sql(product_b2b_sql)"
    ]
   },
   {
@@ -141,32 +138,32 @@
    },
    "outputs": [],
    "source": [
-    "# product_b2c_sql = f\"\"\"\n",
-    "# CREATE OR REPLACE VIEW {catalog}.{gold_schema}.product_b2c AS\n",
-    "# SELECT \n",
-    "#   co.order_id,\n",
-    "#   co.order_item_id,\n",
-    "#   co.product_id,\n",
-    "#   co.quantity as brought_quantity,\n",
-    "#   co.unit_price as selling_price,\n",
-    "#   co.consumer_id,\n",
-    "#   co.order_date,\n",
-    "#   co.order_status,\n",
-    "#   co.total_price as item_total,\n",
-    "#   co.currency,\n",
-    "#   -- co.payment_method,\n",
-    "#   p.product_name,\n",
-    "#   p.brand,\n",
-    "#   p.manufacturer,\n",
-    "#   p.category,\n",
-    "#   p.department,\n",
-    "#   p.unit_price as cost_price,\n",
-    "#   p.retail_price as mrp\n",
-    "# FROM {catalog}.{silver_schema}.consumer_orders_mv co\n",
-    "# LEFT JOIN {catalog}.{silver_schema}.product_mv p ON co.product_id = p.product_id\n",
-    "# WHERE co.order_status = 'Delivered'\n",
-    "# \"\"\"\n",
-    "# spark.sql(product_b2c_sql)"
+    "product_b2c_sql = f\"\"\"\n",
+    "CREATE OR REPLACE VIEW {catalog}.{gold_schema}.product_b2c AS\n",
+    "SELECT \n",
+    "  co.order_id,\n",
+    "  co.order_item_id,\n",
+    "  co.product_id,\n",
+    "  co.quantity as brought_quantity,\n",
+    "  co.unit_price as selling_price,\n",
+    "  co.consumer_id,\n",
+    "  co.order_date,\n",
+    "  co.order_status,\n",
+    "  co.total_price as item_total,\n",
+    "  co.currency,\n",
+    "  -- co.payment_method,\n",
+    "  p.product_name,\n",
+    "  p.brand,\n",
+    "  p.manufacturer,\n",
+    "  p.category,\n",
+    "  p.department,\n",
+    "  p.unit_price as cost_price,\n",
+    "  p.retail_price as mrp\n",
+    "FROM {catalog}.{silver_schema}.consumer_orders_mv co\n",
+    "LEFT JOIN {catalog}.{silver_schema}.product_mv p ON co.product_id = p.product_id\n",
+    "WHERE co.order_status = 'Delivered'\n",
+    "\"\"\"\n",
+    "spark.sql(product_b2c_sql)"
    ]
   }
  ],
