--- a/manufacturer/src/gold_sales/gold.ipynb
+++ b/manufacturer/src/gold_sales/gold.ipynb
@@ -2,37 +2,109 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8e5c0be4",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ffd455a5-267e-470a-a861-e502d9c6bdb1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Configuration\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d21c53f3",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "8db96089-4636-40f4-80af-036e15f66620",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
-    "catalog = \"dev\"\n",
-    "silver_schema = \"02_silver\"\n",
-    "gold_schema = \"03_gold_sales\""
+    "dbutils.widgets.text(\"catalog\", \"dev\")\n",
+    "dbutils.widgets.text(\"silver_schema\", \"02_silver\")\n",
+    "dbutils.widgets.text(\"gold_schema\", \"03_gold_supply\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ead81048-e26a-4176-8d4f-0261f06e4952",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "catalog = dbutils.widgets.get(\"catalog\")\n",
+    "silver_schema = dbutils.widgets.get(\"silver_schema\")\n",
+    "gold_schema = dbutils.widgets.get(\"gold_schema\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "316ad64d-a3da-4646-b829-0158a9a5004d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# catalog = \"dev\"\n",
+    "# silver_schema = \"02_silver\"\n",
+    "# gold_schema = \"03_gold_sales\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d7c04837",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c140e049-5d2f-4ca2-b7f4-9639c5556186",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## Create Gold Schema"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "06cbde10",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4bb68a6c-7411-458d-8eb4-04b8026307d2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {catalog}.{gold_schema}\")"
@@ -40,17 +112,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5031603",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "70f8f664-63ee-42fb-a658-738376670da1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## B2C Overall KPIs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "208c0d99",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "d91f2b1d-6569-4b34-aebc-60049e556f16",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "spark.sql(f\"\"\"\n",
@@ -297,17 +385,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35772eb5",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "a39bb727-4394-41ca-aa10-6c2777963c71",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## B2B Overall KPIs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b09a1aa6",
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fb3044b1-2f5e-4dca-85bc-db46f6cf43a7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "spark.sql(f\"\"\"\n",
@@ -500,10 +604,22 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
+   "dashboards": [],
+   "environmentMetadata": null,
+   "inputWidgetPreferences": null,
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "gold",
+   "widgets": {}
+  },
   "language_info": {
    "name": "python"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 0
 }
