--- a/manufacturer/src/gold_supply/gold.ipynb
+++ b/manufacturer/src/gold_supply/gold.ipynb
@@ -57,26 +57,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "44177dc3-61db-4192-a238-b3047323cdd9",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# catalog = \"dev\"\n",
-    "# silver_schema = \"02_silver\"\n",
-    "# gold_schema = \"03_gold_supply\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -229,7 +209,7 @@
     "    FROM {catalog}.{silver_schema}.inventory_mv i\n",
     "    JOIN {catalog}.{silver_schema}.product_mv p \n",
     "        ON i.product_id = p.product_id\n",
-    "    JOIN {catalog}.{silver_schema}.distributor_sale_order_mv di \n",
+    "    JOIN {catalog}.{silver_schema}.distributor_invoice_mv di\n",
     "        ON p.product_id = di.product_id\n",
     "),\n",
     "agg_level1 AS (\n",
@@ -679,7 +659,7 @@
     "SELECT\n",
     "    DATE_TRUNC('month', invoice_date) AS order_month,\n",
     "    ROUND(SUM(invoice_item_total_amount), 2) AS total_purchase_amount\n",
-    "FROM {catalog}.{silver_schema}.distributor_sale_order_mv\n",
+    "FROM {catalog}.{silver_schema}.distributor_invoice_mv\n",
     "GROUP BY DATE_TRUNC('month', invoice_date)\n",
     "ORDER BY order_month;\n",
     "\"\"\")\n"
@@ -724,7 +704,7 @@
     "FROM {catalog}.{silver_schema}.distributor_mv d\n",
     "JOIN {catalog}.{silver_schema}.distributor_sale_order_mv dso\n",
     "    ON d.distributor_id = dso.distributor_id\n",
-    "JOIN {catalog}.{silver_schema}.distributor_sale_order_mv di\n",
+    "JOIN {catalog}.{silver_schema}.distributor_invoice_mv di\n",
     "    ON dso.order_id = di.sales_order_id\n",
     "GROUP BY d.distributor_name\n",
     "ORDER BY total_purchase_value DESC;\n",
@@ -767,7 +747,7 @@
     "SELECT \n",
     "    pr.category,\n",
     "    SUM(di.invoiced_quantity) AS total_quantity_ordered\n",
-    "FROM {catalog}.{silver_schema}.distributor_sale_order_mv di\n",
+    "FROM {catalog}.{silver_schema}.distributor_invoice_mv di\n",
     "JOIN {catalog}.{silver_schema}.product_mv pr\n",
     "    ON di.product_id = pr.product_id\n",
     "GROUP BY pr.category\n",
@@ -877,7 +857,7 @@
     "    FROM {catalog}.{silver_schema}.inventory_mv i\n",
     "    JOIN {catalog}.{silver_schema}.product_mv p \n",
     "        ON i.product_id = p.product_id\n",
-    "    JOIN {catalog}.{silver_schema}.distributor_sale_order_mv di \n",
+    "    JOIN {catalog}.{silver_schema}.distributor_invoice_mv di \n",
     "        ON p.product_id = di.product_id\n",
     "),\n",
     "combined_base AS (\n",
