Update gold sales and supply job configurations to correct schema references and enhance SQL query data types for improved accuracy.

--- a/manufacturer/src/gold_supply/gold.ipynb
+++ b/manufacturer/src/gold_supply/gold.ipynb
@@ -836,8 +836,8 @@
     "        coi.total_price,\n",
     "        coi.quantity AS quantity,\n",
     "        coi.order_status,\n",
-    "        coi.order_date,\n",
-    "        coi.order_id AS co_order_id\n",
+    "        CAST(coi.order_date AS DATE) AS order_date,\n",
+    "        CAST(coi.order_id AS STRING) AS co_order_id\n",
     "    FROM {catalog}.{silver_schema}.inventory_mv i\n",
     "    JOIN {catalog}.{silver_schema}.product_mv p \n",
     "        ON i.product_id = p.product_id\n",
@@ -851,9 +851,9 @@
     "        p.retail_price,\n",
     "        di.invoice_item_total_amount AS total_price,\n",
     "        di.invoiced_quantity AS quantity,\n",
-    "        di.invoice_date AS order_date,\n",
-    "        di.invoice_id AS co_order_id,\n",
-    "        NULL AS order_status\n",
+    "        CAST(di.invoice_date AS DATE) AS order_date,\n",
+    "        CAST(di.invoice_id AS STRING) AS co_order_id,\n",
+    "        CAST(NULL AS STRING) AS order_status\n",
     "    FROM {catalog}.{silver_schema}.inventory_mv i\n",
     "    JOIN {catalog}.{silver_schema}.product_mv p \n",
     "        ON i.product_id = p.product_id\n",
