Refactor SQL queries in sales gold.ipynb

--- a/manufacturer/src/gold_sales/gold.ipynb
+++ b/manufacturer/src/gold_sales/gold.ipynb
@@ -143,7 +143,7 @@
     "        co.order_id AS c_oid,\n",
     "        co.order_date AS ordered_date,\n",
     "        co.order_status,\n",
-    "        co.total_amount AS total_amount_order,\n",
+    "        co.order_total_amount AS total_amount_order,\n",
     "        co.payment_method AS payment_method_usage,\n",
     "        c.consumer_id,\n",
     "        c.name AS consumer_name,\n",
@@ -167,15 +167,18 @@
     ") ,\n",
     "total_metrics AS (\n",
     "    SELECT\n",
-    "        COALESCE(SUM(total_amount), 0) AS total_consumer_sales,\n",
-    "        COALESCE(AVG(total_amount), 0) AS average_order_value,\n",
+    "        COALESCE(SUM(order_total_amount), 0) AS total_consumer_sales,\n",
+    "        COALESCE(AVG(order_total_amount), 0) AS average_order_value,\n",
     "        COALESCE(COUNT(DISTINCT order_id), 0) AS total_order_count\n",
-    "    FROM {catalog}.{silver_schema}.consumer_orders_mv\n",
+    "    FROM (\n",
+    "        SELECT DISTINCT order_id, order_total_amount\n",
+    "        FROM {catalog}.{silver_schema}.consumer_orders_mv\n",
+    "    ) distinct_orders\n",
     ") ,\n",
     "order_frequency AS (\n",
     "    SELECT COALESCE(AVG(order_count), 0) AS order_frequency\n",
     "    FROM (\n",
-    "        SELECT consumer_id, COUNT(order_id) AS order_count\n",
+    "        SELECT consumer_id, COUNT(DISTINCT order_id) AS order_count\n",
     "        FROM {catalog}.{silver_schema}.consumer_orders_mv\n",
     "        GROUP BY consumer_id\n",
     "    ) sub\n",
@@ -261,7 +264,7 @@
     "        COUNT(DISTINCT consumer_id) FILTER (WHERE order_count > 1)::decimal / \n",
     "        NULLIF(COUNT(DISTINCT consumer_id), 0) AS repeat_purchase_rate\n",
     "    FROM (\n",
-    "        SELECT consumer_id, COUNT(order_id) AS order_count\n",
+    "        SELECT consumer_id, COUNT(DISTINCT order_id) AS order_count\n",
     "        FROM {catalog}.{silver_schema}.consumer_orders_mv\n",
     "        GROUP BY consumer_id\n",
     "    ) sub\n",
@@ -398,14 +401,14 @@
     "CREATE OR REPLACE VIEW {catalog}.{gold_schema}.b2b_overall_kpis AS\n",
     "WITH base AS (\n",
     "    SELECT\n",
-    "        dpi.purchase_item_id,\n",
-    "        dpi.product_id,\n",
-    "        dpi.quantity_ordered AS quantity,\n",
-    "        dpi.unit_cost AS selling_price,\n",
-    "        dpi.unit_cost - p.unit_price AS margin,\n",
-    "        dpi.unit_cost * dpi.quantity_ordered AS total_amount,\n",
-    "        ((dpi.unit_cost - p.unit_price) / dpi.unit_cost) * 100 AS profit_margin,\n",
-    "        dpi.purchase_id AS s_pid,\n",
+    "        dso.item_no AS purchase_item_id,\n",
+    "        dso.product_id,\n",
+    "        dso.order_quantity AS quantity,\n",
+    "        dso.unit_price AS selling_price,\n",
+    "        dso.unit_price - p.unit_price AS margin,\n",
+    "        dso.item_total_amount AS total_amount,\n",
+    "        ((dso.unit_price - p.unit_price) / dso.unit_price) * 100 AS profit_margin,\n",
+    "        dso.order_id AS s_pid,\n",
     "        p.product_name,\n",
     "        p.department,\n",
     "        p.category,\n",
@@ -414,10 +417,10 @@
     "        p.unit_price AS cost_price,\n",
     "        p.release_date,\n",
     "        p.product_status,\n",
-    "        dp.purchase_id AS c_pid,\n",
-    "        dp.order_date AS ordered_date,\n",
-    "        dp.order_status,\n",
-    "        dp.total_amount AS total_amount_order,\n",
+    "        dso.order_id AS c_pid,\n",
+    "        dso.order_date AS ordered_date,\n",
+    "        NULL AS order_status,\n",
+    "        NULL AS total_amount_order,\n",
     "        di.distributor_id,\n",
     "        di.distributor_name,\n",
     "        di.company_name,\n",
@@ -430,24 +433,27 @@
     "        i.quantity_on_hand,\n",
     "        i.inventory_status,\n",
     "        i.reorder_level\n",
-    "    FROM {catalog}.{silver_schema}.distributor_sales_order_item_mv dpi\n",
-    "    LEFT JOIN {catalog}.{silver_schema}.distributor_sales_order_mv dp ON dpi.purchase_id = dp.purchase_id\n",
-    "    LEFT JOIN {catalog}.{silver_schema}.distributor_mv di ON dp.distributor_id = di.distributor_id\n",
-    "    LEFT JOIN {catalog}.{silver_schema}.product_mv p ON dpi.product_id = p.product_id\n",
+    "    FROM {catalog}.{silver_schema}.distributor_sale_order_mv dso\n",
+    "    LEFT JOIN {catalog}.{silver_schema}.distributor_mv di ON dso.distributor_id = di.distributor_id\n",
+    "    LEFT JOIN {catalog}.{silver_schema}.product_mv p ON dso.product_id = p.product_id\n",
     "    LEFT JOIN {catalog}.{silver_schema}.inventory_mv i ON p.product_id = i.product_id\n",
     ") ,\n",
     "total_metrics AS (\n",
     "    SELECT\n",
-    "        COALESCE(SUM(total_amount), 0) AS total_distributor_sales,\n",
-    "        COALESCE(AVG(total_amount), 0) AS average_order_value,\n",
-    "        COALESCE(COUNT(DISTINCT purchase_id), 0) AS total_order_count\n",
-    "    FROM {catalog}.{silver_schema}.distributor_sales_order_mv\n",
+    "        COALESCE(SUM(item_total_amount), 0) AS total_distributor_sales,\n",
+    "        COALESCE(AVG(order_total), 0) AS average_order_value,\n",
+    "        COALESCE(COUNT(DISTINCT order_id), 0) AS total_order_count\n",
+    "    FROM (\n",
+    "        SELECT order_id, SUM(item_total_amount) AS order_total\n",
+    "        FROM {catalog}.{silver_schema}.distributor_sale_order_mv\n",
+    "        GROUP BY order_id\n",
+    "    ) order_totals\n",
     ") ,\n",
     "order_frequency AS (\n",
     "    SELECT COALESCE(AVG(order_count), 0) AS order_frequency\n",
     "    FROM (\n",
-    "        SELECT distributor_id, COUNT(purchase_id) AS order_count\n",
-    "        FROM {catalog}.{silver_schema}.distributor_sales_order_mv\n",
+    "        SELECT distributor_id, COUNT(DISTINCT order_id) AS order_count\n",
+    "        FROM {catalog}.{silver_schema}.distributor_sale_order_mv\n",
     "        GROUP BY distributor_id\n",
     "    ) sub\n",
     ") ,\n",
@@ -573,7 +579,7 @@
     "LEFT JOIN sales_product sp ON p.distributor_id = sp.distributor_id AND p.product_id = sp.product_id\n",
     "LEFT JOIN top_selling_product ts ON p.distributor_id = ts.distributor_id\n",
     "LEFT JOIN low_stock ls ON p.product_id = ls.product_id\n",
-    "LEFT JOIN store_revenue sr ON p.department = sr.location_name\n",
+    "LEFT JOIN store_revenue sr ON p.location_name = sr.location_name\n",
     "LEFT JOIN monthly_sales ms ON DATE_TRUNC('month', p.ordered_date) = ms.month\n",
     "LEFT JOIN clv c ON p.distributor_id = c.distributor_id\n",
     "CROSS JOIN total_metrics tm\n",
