--- a/manufacturer/src/gold_sales/gold.ipynb
+++ b/manufacturer/src/gold_sales/gold.ipynb
@@ -21,7 +21,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "8db96089-4636-40f4-80af-036e15f66620",
      "showTitle": false,
@@ -41,7 +44,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ead81048-e26a-4176-8d4f-0261f06e4952",
      "showTitle": false,
@@ -387,7 +393,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "fb3044b1-2f5e-4dca-85bc-db46f6cf43a7",
      "showTitle": false,
@@ -438,7 +447,7 @@
     ") ,\n",
     "total_metrics AS (\n",
     "    SELECT\n",
-    "        COALESCE(SUM(item_total_amount), 0) AS total_distributor_sales,\n",
+    "        COALESCE(SUM(order_total), 0) AS total_distributor_sales,\n",
     "        COALESCE(AVG(order_total), 0) AS average_order_value,\n",
     "        COALESCE(COUNT(DISTINCT order_id), 0) AS total_order_count\n",
     "    FROM (\n",
@@ -596,7 +605,86 @@
     "pythonIndentUnit": 4
    },
    "notebookName": "gold",
-   "widgets": {}
+   "widgets": {
+    "catalog": {
+     "currentValue": "dev",
+     "nuid": "825b20c1-0b81-4a6f-abd7-bee8e3138fdd",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "dev",
+      "label": null,
+      "name": "catalog",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "dev",
+      "label": null,
+      "name": "catalog",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "gold_schema": {
+     "currentValue": "03_gold_supply",
+     "nuid": "283b20a1-fa2f-4469-a794-6cbcac8fbeab",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "03_gold_supply",
+      "label": null,
+      "name": "gold_schema",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "03_gold_supply",
+      "label": null,
+      "name": "gold_schema",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    },
+    "silver_schema": {
+     "currentValue": "02_silver",
+     "nuid": "a9c61a65-8420-4d91-a9f9-60c24d23febb",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "02_silver",
+      "label": null,
+      "name": "silver_schema",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "02_silver",
+      "label": null,
+      "name": "silver_schema",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
