--- a/manufacturer/src/gold_product/gold.ipynb
+++ b/manufacturer/src/gold_product/gold.ipynb
@@ -104,7 +104,7 @@
     "  so.order_date, \n",
     "  so.currency, \n",
     "  so.order_quantity, \n",
-    "  so.order_quantity_uom as unit_measure, \n",
+    "  so.unit_measure, \n",
     "  so.unit_price as selling_price, \n",
     "  p.product_name,\n",
     "  p.brand,\n",
