changed logic for bootstrap

--- a/manufacturer/src/bootstrap/setup.ipynb
+++ b/manufacturer/src/bootstrap/setup.ipynb
@@ -18,9 +18,11 @@
    },
    "outputs": [],
    "source": [
+    "dbutils.widgets.text(\"volume\", \"data\")\n",
     "dbutils.widgets.text(\"catalog\", \"dev\")\n",
-    "dbutils.widgets.text(\"schema\", \"00_landing\")\n",
-    "dbutils.widgets.text(\"volume\", \"data\")"
+    "dbutils.widgets.text(\"landing_schema\", \"00_landing\")\n",
+    "dbutils.widgets.text(\"bronze_schema\", \"01_bronze\")\n",
+    "dbutils.widgets.text(\"silver_schema\", \"02_silver\")"
    ]
   },
   {
@@ -41,9 +43,11 @@
    },
    "outputs": [],
    "source": [
+    "volume=dbutils.widgets.get(\"volume\")\n",
     "catalog=dbutils.widgets.get(\"catalog\")\n",
-    "schema=dbutils.widgets.get(\"schema\")\n",
-    "volume=dbutils.widgets.get(\"volume\")"
+    "landing_schema=dbutils.widgets.get(\"landing_schema\")\n",
+    "bronze_schema=dbutils.widgets.get(\"bronze_schema\")\n",
+    "silver_schema=dbutils.widgets.get(\"silver_schema\")"
    ]
   },
   {
@@ -64,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "root_path=f\"/Volumes/{catalog}/{schema}/{volume}/\"\n",
+    "root_path=f\"/Volumes/{catalog}/{landing_schema}/{volume}/\"\n",
     "input_file_paths = {\n",
     "    \"Consumer\": \"consumer\",\n",
     "    \"Consumer Order\": \"consumer_orders/consumer_order\",\n",
@@ -103,8 +107,10 @@
    "source": [
     "# Create a Unity Catalog volume using SQL\n",
     "spark.sql(f\"CREATE CATALOG IF NOT EXISTS {catalog}\")\n",
-    "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {catalog}.{schema}\")\n",
-    "spark.sql(f\"CREATE VOLUME IF NOT EXISTS {catalog}.{schema}.{volume}\")"
+    "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {catalog}.{landing_schema}\")\n",
+    "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {catalog}.{bronze_schema}\")\n",
+    "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {catalog}.{silver_schema}\")\n",
+    "spark.sql(f\"CREATE VOLUME IF NOT EXISTS {catalog}.{landing_schema}.{volume}\")"
    ]
   },
   {
@@ -131,6 +137,36 @@
     "    full_path = os.path.join(root_path, input_file_paths[entity_path])\n",
     "    if not os.path.exists(full_path):\n",
     "        os.makedirs(full_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "abf4dee0-98d3-44e0-9f7d-a4430a0620a9",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(f\"use catalog {catalog}\")\n",
+    "tables = spark.sql(f\"show views in {silver_schema}\")\n",
+    "view_names = set([row['viewName'] for row in tables.collect()])\n",
+    "# change manually\n",
+    "required={'consumer_mv','consumer_orders_mv', 'distributor_invoice_mv', 'distributor_mv', 'distributor_sale_order_mv', 'inventory_mv', 'product_mv'}\n",
+    "missing = required.difference(view_names)\n",
+    "if missing:\n",
+    "    raise RuntimeError(f\"Missing views: {missing}\")\n",
+    "else:\n",
+    "    print(\"All available\")"
    ]
   }
  ],
