--- a/manufacturer/src/bootstrap/trigger_update.ipynb
+++ b/manufacturer/src/bootstrap/trigger_update.ipynb
@@ -18,6 +18,7 @@
     "from databricks.sdk import WorkspaceClient\n",
     "from databricks.sdk.service.jobs import PauseStatus\n",
     "w = WorkspaceClient()\n",
+    "# change manually\n",
     "jobs=[\"gold_product\",\n",
     "      \"gold_sales\",\n",
     "      \"gold_supply\"]\n",
@@ -30,9 +31,7 @@
     "print(names_avail)\n",
     "for i in names_avail:\n",
     "    job_settings = w.jobs.get(job_id=i[1]).settings\n",
-    "    # print(i[0],\" before : \",job_settings.trigger.pause_status.value)\n",
     "    job_settings.trigger.pause_status=PauseStatus.UNPAUSED\n",
-    "    # print(i[0],\" after : \",job_settings.trigger.pause_status.value)\n",
     "    w.jobs.reset(\n",
     "        job_id=i[1],\n",
     "        new_settings=job_settings\n",
