schema metadata driven distributor

--- a/manufacturer/src/distributor/distributor_bronze/utilities/testing.ipynb
+++ b/manufacturer/src/distributor/distributor_bronze/utilities/testing.ipynb
@@ -19,7 +19,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "# print(sys.path)\n",
+    "print(sys.path)\n",
+    "print(sys.modules)\n",
     "print(sys.modules.get('manufacturer'))\n",
     "print(sys.modules.get('manufacturer.schema'))\n",
     "sys.modules.pop('manufacturer',None)\n",
@@ -44,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "from manufacturer import get_schema\n",
+    "from manufacturer.package import get_schema\n",
     "get_schema(\"distributor\")"
    ]
   }
